# INFUSER

./: .env.example  .gitignore  .skyignore  CREDENTIALS.md  README.md  requirements.txt  setup.sh  setup_pod.sh
launcher/: __init__.py  command_line.txt  pyproject.toml  resolve_sync_path.py  run.sh
launcher/k8s/: cancel_training.sh  launch.sh  pre_download_models.py  run_job.sh
launcher/k8s/job_types/: gen_eval.conf  opencompass.conf  sol_eval.conf  training.conf  training_interactive.conf
launcher/local/: launch.sh
launcher/opensource/: Dockerfile.runtime  Dockerfile.runtime.dockerignore  README.md  build_image.sh  env.example  launch_k8s.sh  requirements-opencompass.txt  requirements-runtime.txt
launcher/preparation/: __init__.py  download_data.py
launcher/slurm/: config.sh  gpu_status.sh  launch.sh  submit.sh  submit_gen_eval.sh  submit_sol_eval.sh
scripts/: build_putnam_aime_documents.py  run_opencompass.py
tests/: test_agent_loop_progress.py  test_benchmark_eval.py  test_checkpoint_upload_failure_policy.py  test_config_resolvers.py  test_dry_run_mock_runtime.py  test_env_utils.py  test_free_form_prompt_icl.py  test_generator_reward_structure.py  test_global_batch_norm_config.py  test_hf_backend_integration.py  test_hf_checkpoint_utils.py  test_hf_remote_resolver.py  test_hmmt_prompting.py  test_influence_similarity.py  test_math500_prompting.py  test_mcq_prompt_icl.py  test_mcq_utils.py  test_medqa_prompting.py  test_mmlu_pro_prompting.py  test_octothinker_chat_templates.py  test_olympiadbench_prompting.py  test_opener_metrics.py  test_run_metadata.py  (+15 more)
(+216 files in other folders)
